chore: fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ h3 {
 }
 
 .title {
-  margin-top: 80px;
+  margin-top: 30px;
   font-size: 28px;
 }
 
@@ -80,7 +80,7 @@ h3 {
   margin: 0;
   font-size: 25px;
   line-height: 3.75;
-  margin-top: 50px;
+  margin-top: 40px;
   /* padding-top: 50px; */
   font-family: "Montserrat", sans-serif;
 }
@@ -246,7 +246,7 @@ nav a:first-child {
 }
 
 #homepage-cont {
-  margin-bottom: 100px;
+  margin-bottom: 70px;
   height: 800px;
 }
 
